--- a/html/contact.html
+++ b/html/contact.html
@@ -399,6 +399,7 @@
     </div>
     <!--registration popup section-->
     <div id="popupOverlay" class="popup-overlay">s</div>
+    <dotlottie-player id="signInAnimation" src="https://lottie.host/e438b05a-929d-4dc4-bf5b-ec9acabefed7/GrnJKaAVK8.lottie" background="transparent" speed="1" style="width: 300px; height: 300px; display: none;" loop autoplay></dotlottie-player>
     <div id="registrationPopup" class="popup">
         <div class="popup-container">
             <div class="popup-logo">
@@ -444,7 +445,9 @@
         </div>
     </div>
 
-    <!--custom javascript-->
+    <!--external libaries-->
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+    <!--custom script-->
     <script src="../js/registration.js"></script>
     <script src="../js/products.js"></script>
     <script src="../js/contact.js"></script>
