continued with showroom html, added showroom images

--- a/html/showroom.html
+++ b/html/showroom.html
@@ -141,35 +141,35 @@
             <h1>Home office</h1>
             <p>A place of clarity and encouraging focus.</p>
             <div class="showroom-hero-image">
-                <img src="images/showroom/office-main.jpg" alt="Home office setup">
+                <img src="../images/showroom/office-main.jpg" alt="Home office setup">
                 <!--interactive hotspots-->
-                <div class="hotspot" style="top: 45%; left: 25%;" data-product="Office Chair">
+                <div class="hotspot" style="top: 45%; left: 25%;" data-product="Shelving Unit">
                     <span class="hotspot-dot"></span>
                     <div class="hotspot-content">
-                        <img src="images/products/chair-1.jpg" alt="Office Chair">
+                        <img src="../images/showroom/shelving-unit.jpg" alt="Shelving Unit">
                         <div class="product-info">
-                            <h3>Office Chair</h3>
+                            <h3>KALLAX</h3>
+                            <p>$170</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hotspot" style="top: 35%; left: 55%;" data-product="Pendant Lamp">
+                    <span class="hotspot-dot"></span>
+                    <div class="hotspot-content">
+                        <img src="../images/showroom/pendant-lamp.jpg" alt="Pendant Lamp">
+                        <div class="product-info">
+                            <h3>REGOLIT / HEMMA</h3>
+                            <p>$11</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hotspot" style="top: 65%; left: 75%;" data-product="Desk">
+                    <span class="hotspot-dot"></span>
+                    <div class="hotspot-content">
+                        <img src="../images/showroom/desk.jpg" alt="Desk">
+                        <div class="product-info">
+                            <h3>ALEX</h3>
                             <p>$299</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="hotspot" style="top: 35%; left: 55%;" data-product="Desk Lamp">
-                    <span class="hotspot-dot"></span>
-                    <div class="hotspot-content">
-                        <img src="images/products/lamp-1.jpg" alt="Desk Lamp">
-                        <div class="product-info">
-                            <h3>Desk Lamp</h3>
-                            <p>$129</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="hotspot" style="top: 65%; left: 75%;" data-product="Storage Unit">
-                    <span class="hotspot-dot"></span>
-                    <div class="hotspot-content">
-                        <img src="images/products/storage-1.jpg" alt="Storage Unit">
-                        <div class="product-info">
-                            <h3>Storage Unit</h3>
-                            <p>$199</p>
                         </div>
                     </div>
                 </div>
@@ -181,25 +181,25 @@
             <h2>FEATURED WORKSPACES AT HOME</h2>
             <div class="workspace-grid">
                 <div class="workspace-card">
-                    <img src="images/showroom/workspace-1.jpg" alt="Workspace 1">
+                    <img src="../images/showroom/workspace-1.jpg" alt="Workspace 1">
                     <div class="card-overlay">
                         <button class="shop-button">One dorm room, two expressions</button>
                     </div>
                 </div>
                 <div class="workspace-card">
-                    <img src="images/showroom/workspace-2.jpg" alt="Workspace 2">
+                    <img src="../images/showroom/workspace-2.jpg" alt="Workspace 2">
                     <div class="card-overlay">
                         <button class="shop-button">Room for both focus and free time</button>
                     </div>
                 </div>
                 <div class="workspace-card">
-                    <img src="images/showroom/workspace-3.jpg" alt="Workspace 3">
+                    <img src="../images/showroom/workspace-3.jpg" alt="Workspace 3">
                     <div class="card-overlay">
                         <button class="shop-button">Creative, colourful, organised</button>
                     </div>
                 </div>
                 <div class="workspace-card">
-                    <img src="images/showroom/workspace-4.jpg" alt="Workspace 4">
+                    <img src="../images/showroom/workspace-4.jpg" alt="Workspace 4">
                     <div class="card-overlay">
                         <button class="shop-button">Studies in tune with the times</button>
                     </div>
@@ -212,7 +212,7 @@
             <h2>GET THE LOOK</h2>
             <div class="look-grid">
                 <div class="look-card">
-                    <img src="images/showroom/look-1.jpg" alt="Minimalist office setup">
+                    <img src="../images/showroom/look-1.jpg" alt="Minimalist office setup">
                     <div class="product-tag">
                         <span class="tag-dot"></span>
                         <div class="tag-content">
@@ -222,7 +222,7 @@
                     </div>
                 </div>
                 <div class="look-card">
-                    <img src="images/showroom/look-2.jpg" alt="Creative workspace">
+                    <img src="../images/showroom/look-2.jpg" alt="Creative workspace">
                     <div class="product-tag">
                         <span class="tag-dot"></span>
                         <div class="tag-content">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div class="look-card">
-                    <img src="images/showroom/look-3.jpg" alt="Storage solutions">
+                    <img src="../images/showroom/look-3.jpg" alt="Storage solutions">
                     <div class="product-tag">
                         <span class="tag-dot"></span>
                         <div class="tag-content">
@@ -249,35 +249,35 @@
             <h2>CLICK TO SEE OUR PRODUCTS IN REAL HOMES | @MOKESELL3</h2>
             <div class="homes-grid">
                 <div class="home-image">
-                    <img src="images/showroom/real-home-1.jpg" alt="Real home office 1">
+                    <img src="../images/showroom/real-home-1.jpg" alt="Real home office 1">
                 </div>
                 <div class="home-image">
-                    <img src="images/showroom/real-home-2.jpg" alt="Real home office 2">
+                    <img src="../images/showroom/real-home-2.jpg" alt="Real home office 2">
                 </div>
                 <div class="home-image">
-                    <img src="images/showroom/real-home-3.jpg" alt="Real home office 3">
+                    <img src="../images/showroom/real-home-3.jpg" alt="Real home office 3">
                 </div>
                 <div class="home-image">
-                    <img src="images/showroom/real-home-4.jpg" alt="Real home office 4">
+                    <img src="../images/showroom/real-home-4.jpg" alt="Real home office 4">
                 </div>
             </div>
         </section>
-
+        
         <!--benefits section-->
         <section class="benefits">
             <div class="benefits-grid">
                 <div class="benefit-item">
-                    <img src="images/icons/delivery-icon.png" alt="Delivery">
+                    <img src="../images/icons/delivery-icon.png" alt="Delivery">
                     <h3>Delivery from $5 - $35</h3>
                     <p>Get your order delivered in 3-5 days and enjoy FREE home delivery over $500</p>
                 </div>
                 <div class="benefit-item">
-                    <img src="images/icons/assembly-icon.png" alt="Installation">
+                    <img src="../images/icons/assembly-icon.png" alt="Installation">
                     <h3>Assembly</h3>
                     <p>We help you piece it all together</p>
                 </div>
                 <div class="benefit-item">
-                    <img src="images/icons/card-icon.png" alt="Support">
+                    <img src="../images/icons/payment-icon.png" alt="Support">
                     <h3>Flexible payment options</h3>
                     <p>Pay with 0% interest instalment plans or with Atome</p>
                 </div>
