--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,7 @@
     <!--external libraries-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
     <!--google maps api-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDlMoIY2T5KvhSo3-PeiNxVvg0TQFiYyU&callback=initMap" async defer></script>
 </head>
 <body>
     <header class="header">
@@ -167,14 +167,13 @@
                 </div>
             </div>
         </section>
-
         <!--headquarters section-->
         <section class="office headquarters">
             <div class="office-info">
                 <h2>Headquarters</h2>
-                <h3>South Block, Singapore</h3>
+                <h3>Bukit Timah, Singapore</h3>
                 <address>
-                    <p>870 Bukit Timah Ave<br>SG 65</p>
+                    <p>870 Bukit Timah Road<br>Singapore 589630</p>
                     <a href="mailto:contact.sg@mokesell.com" class="contact-link">
                         <img src="../images/icons/mail-icon.png" alt="Email">
                         contact.sg@mokesell.com
@@ -207,7 +206,7 @@
                 <div class="office-info">
                     <h3>Berlin, Germany</h3>
                     <address>
-                        <p>Gormannstraße 89<br>Alt-Mölln 49</p>
+                        <p>Gormannstraße 89<br>Berlin 10176</p>
                         <a href="mailto:contact.german@mokesell.com" class="contact-link">
                             <img src="../images/icons/mail-icon.png" alt="Email">
                             contact.german@mokesell.com
@@ -224,7 +223,7 @@
                 <div class="office-info">
                     <h3>Vienna, Austria</h3>
                     <address>
-                        <p>Mariahilferstraße 1, Gräfe-Platz<br>13, Hardsberg</p>
+                        <p>Mariahilferstraße 1<br>Vienna 1050</p>
                         <a href="mailto:contact.austria@mokesell.com" class="contact-link">
                             <img src="../images/icons/mail-icon.png" alt="Email">
                             contact.austria@mokesell.com
