--- a/html/product-details.html
+++ b/html/product-details.html
@@ -40,8 +40,9 @@
                     <div id="guestNav">
                         <button class="auth-button" id="navSignIn">Sign in</button>
                         <button class="auth-button" id="navSignUp">Sign up</button>
-                        <div class="nav-icon">
+                        <div class="cart-icon" id="guestCartIcon">
                             <img src="../images/icons/cart-icon.png" alt="cart icon">
+                            <span class="cart-badge">0</span>
                         </div>
                     </div>
                     <div id="userNav">
@@ -49,10 +50,11 @@
                             <a href="#" class="nav-icon">
                                 <img src="../images/icons/favourites-icon.png" id="favouritesIcon" alt="favourites icon">
                             </a>
-                            <div class="nav-icon">
+                            <div class="cart-icon" id="userCartIcon">
                                 <img src="../images/icons/cart-icon.png" alt="cart icon">
+                                <span class="cart-badge">0</span>
                             </div>
-                            <div class="nav-icon">
+                            <div class="profile-icon">
                                 <img src="../images/icons/profile-icon.png" id="profileIcon" alt="profile icon">
                             </div>
                             <ul class="user-dropdown" id="userDropdown">
@@ -143,7 +145,9 @@
                 <h3 id="breadcrumbNavigation"></h3>
                 <!--product gallery-->
                 <div class="product-gallery">
-                    <img id="mainImage" src="" alt="product image">
+                    <div class="main-image">
+                        <img id="mainImage" src="" alt="product image">
+                    </div>
                     <div class="secondary-images" id="secondaryImages"></div>
                 </div>
                 <!--seller profile-->
@@ -202,7 +206,7 @@
                     <img src="../images/icons/points-icon.png" alt="points icon">
                     <p>Earn <span id="productPoints">0</span><strong> Moke Points</strong> with this purchase.</p>
                 </div>
-                <button id="addToCart" data-add-to-cart data-product-id="">ADD TO CART</button>
+                <button id="addToCart" data-product-id="">ADD TO CART</button>
             </div>
         </section>
         <!--seller reviews section-->
@@ -285,20 +289,17 @@
             <h2>Your cart</h2>
             <button class="close-cart">×</button>
         </div>
-
         <!--cart items container-->
         <div id="cartItems" class="cart-items">
             <!--cart items-->
         </div>
-
         <!--empty cart state-->
         <div id="emptyCart" class="empty-cart">
             <div id="emptyCartLottie"></div>
             <h3>Your cart is empty</h3>
             <p>Looks like you haven't added any items yet</p>
-            <button class="continue-shopping">Continue Shopping</button>
+            <button class="continue-shopping"><a href="../html/products.html">Continue Shopping</a></button>
         </div>
-
         <!--cart summary-->
         <div class="cart-summary">
             <!--voucher input-->
@@ -306,7 +307,6 @@
                 <input type="text" id="voucherCode" placeholder="Enter voucher code">
                 <button id="applyVoucher">Apply</button>
             </div>
-
             <!--summary details-->
             <div class="summary-details">
                 <div class="summary-row">
@@ -326,14 +326,12 @@
                     <span id="cartTotal">$0.00</span>
                 </div>
             </div>
-
             <!--checkout button-->
             <button id="checkoutButton" class="checkout-button">
                 Continue to check out
             </button>
         </div>
     </div>
-
     <!--cart item template-->
     <template id="cartItemTemplate">
         <div class="cart-item">
@@ -354,6 +352,7 @@
             <button class="remove-item" aria-label="Remove item">×</button>
         </div>
     </template>
+
     <!--fixed buttons section-->
     <div class="fixed-buttons">
         <a href="../html/game.html">
